[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/images/paper.png" type="Texture" id=1]
[ext_resource path="res://assets/images/board.png" type="Texture" id=2]
[ext_resource path="res://prefabs/market_window/MarketWindow.gd" type="Script" id=3]
[ext_resource path="res://prefabs/market_good/MarketGood.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/heading.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/fonts/Ubuntu-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/images/btn-small-hover.png" type="Texture" id=7]
[ext_resource path="res://assets/images/btn-small.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 23
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="MarketWindow" type="Node2D"]
script = ExtResource( 3 )

[node name="Window" type="Node2D" parent="."]
position = Vector2( 0, 2 )

[node name="Body" type="Sprite" parent="Window"]
modulate = Color( 1, 1, 1, 0.705882 )
position = Vector2( 347, 405.5 )
scale = Vector2( 1.01314, 1.06657 )
texture = ExtResource( 1 )

[node name="Header" type="Sprite" parent="Window"]
position = Vector2( 343, 27.75 )
scale = Vector2( 1.0118, 0.760274 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 137.0
margin_top = 7.0
margin_right = 543.0
margin_bottom = 57.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Market"
align = 1
valign = 1

[node name="Tooltip" type="Button" parent="."]
margin_top = 3.0
margin_right = 687.0
margin_bottom = 56.0
hint_tooltip = "Buy and sell goods on the market"
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Goods" type="Node2D" parent="."]
position = Vector2( 34, 77 )
__meta__ = {
"_edit_group_": true
}

[node name="Grain" parent="Goods" instance=ExtResource( 4 )]
margin_left = 1.0
margin_top = -9.0
margin_right = 1.0
margin_bottom = -9.0

[node name="Corn" parent="Goods" instance=ExtResource( 4 )]
margin_left = 1.0
margin_top = 46.0
margin_right = 1.0
margin_bottom = 46.0
kind = 1

[node name="Vegetables" parent="Goods" instance=ExtResource( 4 )]
margin_left = 1.0
margin_top = 102.0
margin_right = 1.0
margin_bottom = 102.0
kind = 3

[node name="Fruits" parent="Goods" instance=ExtResource( 4 )]
margin_left = 1.0
margin_top = 158.0
margin_right = 1.0
margin_bottom = 158.0
kind = 2

[node name="Cotton" parent="Goods" instance=ExtResource( 4 )]
margin_left = 1.0
margin_top = 214.0
margin_right = 1.0
margin_bottom = 214.0
kind = 4

[node name="Beer" parent="Goods" instance=ExtResource( 4 )]
margin_left = 1.0
margin_top = 271.0
margin_right = 1.0
margin_bottom = 271.0
kind = 5

[node name="Bricks" parent="Goods" instance=ExtResource( 4 )]
margin_left = 1.0
margin_top = 327.0
margin_right = 1.0
margin_bottom = 327.0
kind = 6

[node name="Cocoa" parent="Goods" instance=ExtResource( 4 )]
margin_left = 1.0
margin_top = 383.0
margin_right = 1.0
margin_bottom = 383.0
kind = 7

[node name="Coffee" parent="Goods" instance=ExtResource( 4 )]
margin_left = 1.0
margin_top = 439.0
margin_right = 1.0
margin_bottom = 439.0
kind = 8

[node name="Sugar" parent="Goods" instance=ExtResource( 4 )]
margin_left = 1.0
margin_top = 494.0
margin_right = 1.0
margin_bottom = 494.0
kind = 9

[node name="Tabacco" parent="Goods" instance=ExtResource( 4 )]
margin_left = 1.0
margin_top = 550.0
margin_right = 1.0
margin_bottom = 550.0
kind = 10

[node name="Silk" parent="Goods" instance=ExtResource( 4 )]
margin_left = 1.0
margin_top = 605.0
margin_right = 1.0
margin_bottom = 605.0
kind = 11

[node name="BuySellAmount" type="Node2D" parent="."]
position = Vector2( 603, 10 )
__meta__ = {
"_edit_group_": true
}

[node name="BtnBuySellAmount" type="TextureButton" parent="BuySellAmount"]
margin_left = 1.0
margin_top = 2.0
margin_right = 69.0
margin_bottom = 39.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )

[node name="AmountLabel" type="Label" parent="BuySellAmount"]
margin_left = 1.0
margin_top = 4.0
margin_right = 69.0
margin_bottom = 36.0
custom_colors/font_color = Color( 1, 0.933333, 0.737255, 1 )
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
valign = 1

[connection signal="button_up" from="BuySellAmount/BtnBuySellAmount" to="." method="_on_BtnBuySellAmount_button_up"]
